/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.10/userguide/building_java_projects.html in the Gradle documentation.
 */
buildscript {
    repositories {
        mavenCentral()
        gradlePluginPortal()
    }
    dependencies {
        classpath 'com.gradleup.shadow:shadow-gradle-plugin:8.3.6'
    }
}

plugins {
    id 'com.gradleup.shadow' version '8.3.6'
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation 'com.formdev:flatlaf:3.5.4'
    implementation 'org.jetbrains:annotations:24.0.0'
    implementation 'net.java.dev.jna:jna:5.17.0'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'me.markoutte.deviewer.Main'
}

// `apply plugin` stuffs are used with `buildscript`.
apply plugin: 'java'
apply plugin: 'com.gradleup.shadow'

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
